# open-ecommerce

./: .dockerignore  .gitignore  Dockerfile  README.md  admin.py  app.py  auth.py  cart.py  models.py  products.py  pyproject.toml  swagger.py
.github/workflows/: docker-build.yml
templates/admin/: base.html  dashboard.html  dynamic_fields.html  login.html  orders.html  product_form.html  products.html  user_form.html  users.html
